--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -8,6 +8,7 @@ header {
   justify-content: center;
   align-items: center;
   padding: 1rem 0;
+  backdrop-filter: blur(10px);
 }
 
 .navbar {
@@ -16,6 +17,7 @@ header {
   background: #1668c5;
   padding: 0.5rem 1rem;
   border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 1);
 }
 
 .nav-link {
@@ -24,11 +26,14 @@ header {
   text-transform: uppercase;
   padding: 0 15px;
   display: inline-block;
+  position: relative;
 }
 
 .nav-link::after {
   content: "";
-  display: block;
+  position: absolute;
+  left: 0;
+  bottom: -2px;
   width: 0;
   height: 2px;
   background: #3783ff;
