--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Header from '../components/Header.astro';
+import Header from '../components/Header.jsx';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 ---
@@ -19,3 +19,4 @@ import '../styles/global.css';
     <Footer />
 </body>
 </html>
+../components/Header.jsx
