--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -61,6 +61,7 @@
 
 @media (max-width: 768px) {
   .navbar {
+    padding: 0.5rem 0.1rem;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
