added meta tags

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,22 @@ import '../styles/global.css';
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maximilian Neßlauer</title>
+    <meta name="description" content="Maximilian Neßlauer's personal website showcasing projects and skills in computer science and software development.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Maximilian Neßlauer - Computer Science Student">
+    <meta property="og:description" content="Explore Maximilian Neßlauer's website.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://https://www.maxi-n.tech/">
+    <meta property="og:site_name" content="Maximilian Neßlauer's Website">
+
+    <!-- Twitter -->
+    <meta name="twitter:site" content="@Maxi_Nesslauer">
+    <meta name="twitter:title" content="Maximilian Neßlauer - Computer Science Student">
+    <meta name="twitter:description" content="Explore Maximilian Neßlauer's website">
+
+    <meta name="author" content="Maximilian Neßlauer, maxi@yourwebsite.com">
+    <meta name="keywords" content="Maximilian Neßlauer, Computer Science, Portfolio, Software Developer, Projects">
 </head>
 <body>
     <Header />
