--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Header from '../components/Header.jsx';
 import Footer from '../components/Footer.astro';
+import SocialLinks from '../components/SocialLinks.astro';
 import '../styles/global.css';
 ---
 
@@ -10,6 +11,8 @@ import '../styles/global.css';
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maximilian Neßlauer</title>
     <meta name="description" content="Maximilian Neßlauer's personal website showcasing projects and skills in computer science and software development.">
+
+    <script src="https://kit.fontawesome.com/a0e0124531.js" crossorigin="anonymous"></script>
 
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Maximilian Neßlauer - Computer Science Student">
@@ -30,12 +33,13 @@ import '../styles/global.css';
     <Header />
 
     <main style="min-height: calc(100vh - 120px); padding: 20px;">
-        <section class="intro">
+        <section class="intro, container">
             <p>Hello! I'm Maxi, a 19-year-old Computer Science student passionate about solving real-world problems using technology.
                 My journey in programming started with a friend showing me his projects and introducing me to Codecademy
                 and TeamTreehouse.
             </p>
         </section>
+        <SocialLinks />
     </main>
 
     <Footer />
