--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -1,3 +1,7 @@
+---
+import "../styles/socialLinks.css";
+---
+
 <section id="contact" class="section">
     <div class="container">
         <h2 class="text-center text-2xl font-bold mb-2">Contact</h2>
