--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import SpeedInsights from "@vercel/speed-insights/astro";
 import Header from '../components/Header.jsx';
 import Footer from '../components/Footer.astro';
 import Skills from '../components/Skills.astro';
@@ -71,5 +72,6 @@ import '../styles/global.css';
     </main>
 
     <Footer />
+    <SpeedInsights/>
 </body>
 </html>
