added imprint and privacy policy page. Still need to add content to them

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,12 @@
 import '../styles/footer.css';
 ---
 <footer>
-    <div class="footer-container">
+    <div class="footer-container text-center">
         <p>© 2024 Maximilian Neßlauer. All rights reserved.</p>
+        <div class="flex justify-center items-center mt-2">
+            <a href="/privacy-policy" class="text-blue-500 hover:underline px-4">Privacy Policy</a>
+            <a class="">|</a>
+            <a href="/imprint" class="text-blue-500 hover:underline px-4">Imprint</a>
+        </div>
     </div>
 </footer>
