--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,12 +18,16 @@ body {
 }
 
 .container {
-    max-width: 800px;
+    max-width: 50rem;
     margin: 2rem auto;
     padding: 20px;
     background-color: rgba(28, 69, 135, 0.7);
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+}
+
+.bigger-container {
+    max-width: 95%;
 }
 
 .intro p {
@@ -35,5 +39,8 @@ body {
 @media (max-width: 768px) {
     body {
         font-size: 16px;
+    }
+    .container {
+        max-width: 95%;
     }
 }
