Refactor Header component to use TypeScript in MainLayout and update Imprint and Privacy Policy pages. User can now choose between german and english privacy policy

--- a/src/pages/imprint.astro
+++ b/src/pages/imprint.astro
@@ -3,8 +3,9 @@ import MainLayout from '../layouts/MainLayout.astro';
 ---
 
 <MainLayout>
-    <div class="container bigger-container">
-        <h1 class="text-center text-3xl font-bold mb-4">Imprint</h1>
-        <p>Imprint text goes here...</p>
+    <div class="container text-center">
+        <h1 class="text-3xl font-bold mb-4">Imprint</h1>
+        <p class="mb-2">Maximilian Neßlauer</p>
+        <p class="mb-2">maximiliannesslauer@gmail.com</p>
     </div>
 </MainLayout>
