--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,6 +1,6 @@
 ---
 import SpeedInsights from "@vercel/speed-insights/astro";
-import Header from '../components/Header.jsx';
+import Header from '../components/Header.tsx';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 ---
