--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -1,10 +1,12 @@
 ---
+// src/pages/privacy-policy.astro
 import MainLayout from '../layouts/MainLayout.astro';
+import LanguageToggle from '../components/LanguageToggle.tsx';
 ---
 
 <MainLayout>
-    <div class="container bigger-container">
+    <div class="container privacy-policy-container">
         <h1 class="text-center text-3xl font-bold mb-4">Privacy Policy</h1>
-        <p>privacy policy text goes here...</p>
+        <LanguageToggle client:visible />
     </div>
 </MainLayout>
