updated intro to make the greeting bold and big

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,8 @@ import '../styles/global.css';
 <MainLayout>
 
     <section class="intro, container">
-        <p>Hello! I'm Maxi, a 20-year-old Computer Science student passionate about solving real-world problems using technology.
+        <h class="font-bold text-2xl">Hello! I'm Maximilian Neßlauer</h>
+        <p class="pt-2">I am a 20-year-old Computer Science student passionate about solving real-world problems using technology.
             My journey in programming started with a friend showing me his projects and introducing me to Codecademy
             and TeamTreehouse.
         </p>
