--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,26 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import Skills from '../components/Skills.astro';
 import SocialLinks from '../components/SocialLinks.astro';
+
+import ProjectCard from "../components/ProjectCard";
+import projects from "../projects.json"
+// Ensure TypeScript understands the project structure
+interface Project {
+  title: string;
+  description: string;
+  githubLink?: string;
+  imageSrc?: string;
+  imageAlt?: string;
+  videoSrc?: string;
+  additionalLinks?: {
+    url: string;
+    label: string;
+  }[];
+}
+
+const projectsData: Project[] = projects;
+
+
 import '../styles/global.css';
 ---
 
@@ -39,6 +59,14 @@ import '../styles/global.css';
         <p class="mb-2">
             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
         </p>
+    </section>
+    <section class="container">
+        <h1 class="font-bold text-2xl">My Projects</h1>
+        <div>
+            {projectsData.map(project => (
+            <ProjectCard {...project} />
+            ))}
+        </div>
     </section>
     <Skills />
     <SocialLinks />
