added status indicator to project cards

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import MainLayout from "../layouts/MainLayout.astro";
 import Skills from '../components/Skills.astro';
 import SocialLinks from '../components/SocialLinks.astro';
 
-import ProjectCard from "../components/ProjectCard";
+import ProjectCard from "../components/ProjectCard.tsx";
 import projects from "../projects.json"
 // Ensure TypeScript understands the project structure
 interface Project {
