--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,5 +1,9 @@
 .project-card {
     background-color: rgba(41, 87, 161, 0.749);
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
     color: var(--text-color);
@@ -10,15 +14,12 @@
 
 .project-card:hover {
     transform: scale(1.03);
-    position: relative;
-    z-index: 3;
 }
 
 .project-card img, .project-card video {
     width: 100%;
     border-radius: 8px;
 }
-
 .project-card a {
     color: var(--text-light);
     text-decoration: none;
@@ -27,11 +28,35 @@
 .project-card a:hover {
     text-decoration: underline;
 }
-
 .project-links {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     margin-top: 1rem;
+}
+
+.status-indicator {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    display: flex;
+    align-items: center;
+    color: var(--text-light);
+}
+
+.status-dot {
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    margin-right: 5px;
+    display: inline-block;
+}
+
+.last-commit {
+    position: absolute;
+    bottom: 30px;
+    right: 10px;
+    font-size: 0.8rem;
+    color: var(--text-light);
 }
 
 @media (max-width: 768px) {
