updated privacy policy

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -18,7 +18,7 @@ import '../styles/global.css';
     <meta property="og:title" content="Maximilian Neßlauer - Computer Science Student">
     <meta property="og:description" content="Explore Maximilian Neßlauer's website.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://https://www.maxi-n.tech/">
+    <meta property="og:url" content="https://www.maxi-n.tech/">
     <meta property="og:site_name" content="Maximilian Neßlauer's Website">
 
     <!-- Twitter -->
