--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -12,6 +12,8 @@ import '../styles/global.css';
     <title>Maximilian Neßlauer</title>
     <meta name="description" content="Maximilian Neßlauer's personal website showcasing projects and skills in computer science and software development.">
 
+    <link rel="sitemap" href="/sitemap-index.xml" />
+
     <script src="https://kit.fontawesome.com/a0e0124531.js" crossorigin="anonymous" is:inline></script>
 
     <!-- Open Graph / Facebook -->
