--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ import '../styles/global.css';
         <h1 class="font-bold text-2xl">My Projects</h1>
         <div>
             {projectsData.map(project => (
-            <ProjectCard {...project}/>
+            <ProjectCard client:visible {...project}/>
             ))}
         </div>
     </section>
