--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -52,9 +52,10 @@
 }
 
 .last-commit {
-    position: absolute;
-    bottom: 30px;
-    right: 10px;
+    text-align: right;
+    margin-top: 1rem;
+    bottom: 16px;
+    right: 16px;
     font-size: 0.8rem;
     color: var(--text-light);
 }
